--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Crossword Scraper",
-  "description": "Download .puz or .jpz files from crossword applets for offline solving.",
-  "version": "1.0.1",
+  "description": "Download .puz, .jpz, or .pdf files from crossword applets for offline solving.",
+  "version": "1.0.2",
   "icons": {
     "128": "128.png"
   },
@@ -21,5 +21,8 @@
     "https://*.wsj.com/*",
     "https://*.bostonglobe.com/*",
     "https://*.worldofcrosswords.com/*"
+  ],
+  "web_accessible_resources": [
+    "fonts/*.ttf"
   ]
 }
