Add options page.
Introduce settings for .puz unicode support and PDF ink saver
percentage, and persist these settings.

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -10,8 +10,10 @@
     "default_icon": "48.png",
     "default_popup": "popup.html"
   },
+  "options_page": "options.html",
   "permissions": [
     "activeTab",
+    "storage",
     "webNavigation"
   ],
   "optional_permissions": [
