Use non-deprecated way of specifying options page.

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -10,7 +10,10 @@
     "default_icon": "48.png",
     "default_popup": "popup.html"
   },
-  "options_page": "options.html",
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
   "permissions": [
     "activeTab",
     "storage",
