Separate extension by browser instead of manifest version.
- Use "chrome" and "firefox" instead of "v3" and "v2" now that manifest
  v3 is in use on Chrome.
- Add extension ID to the Firefox variant so that storage APIs can be
  used during local development.

--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -25,5 +25,5 @@
     "http://*/",
     "https://*/"
   ],
-  "minimum_chrome_version": "{MINIMUM_CHROME_VERSION}"
+  {BROWSER_SPECIFIC_SETTINGS}
 }
