--- a/.github/workflows/gradle-build.yaml
+++ b/.github/workflows/gradle-build.yaml
@@ -20,7 +20,7 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
       - name: Build with Gradle
-        run: ./gradlew check productionV2Extension productionV3Extension
+        run: ./gradlew check assemble
       - name: Archive extension zip
         uses: actions/upload-artifact@v2
         with:
