--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": {MANIFEST_VERSION},
   "name": "Crossword Scraper",
-  "description": "Download .puz, .jpz, or .pdf files from crossword applets for offline solving.",
-  "version": "1.2.25",
+  "description": "Download digital puzzle files from crossword applets for offline solving.",
+  "version": "1.3.0",
   "icons": {
     "128": "128.png"
   },
